--- a/app_user/styles.css
+++ b/app_user/styles.css
@@ -44,6 +44,41 @@
   animation-delay: 0.7s;
 }
 
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #111111bd;
+  display: flex;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal--show {
+  opacity: 1;
+  pointer-events: unset;
+}
+
+.modal-container {
+  margin: auto;
+  max-width: 600px;
+  max-height: 90%;
+  width: 90%;
+  background-color: #fff;
+  border-radius: 6px;
+  padding: 3em 2.5em;
+  display: grid;
+  gap: 1em;
+  place-items: center;
+  grid-auto-columns: 100%;
+}
+
+.modal-close {
+  display: inline-block;
+}
+
 @keyframes slideInFromLeft {
   from {
     transform: translateX(-100vw);
