--- a/app_admin/styles/screenDashboardAdmin.css
+++ b/app_admin/styles/screenDashboardAdmin.css
@@ -1,7 +1,7 @@
 /* Estructura principal */
 #dashboard-screen {
   display: flex;
-  height: 100vh;
+  height: auto;
   font-family: 'Inter', sans-serif;
 }
 
