--- a/app_admin/styles/screenAdmin1.css
+++ b/app_admin/styles/screenAdmin1.css
@@ -4,8 +4,7 @@ html, body {
   padding: 0;
   box-sizing: border-box;
   width: 100vw;
-  height: 100vh;
-  overflow: hidden;
+  height: auto;
 }
 
 /* ====== screenAdmin1.css - ESTILOS AISLADOS ====== */
