--- a/app_admin/styles/screenChangeStatusAdmin.css
+++ b/app_admin/styles/screenChangeStatusAdmin.css
@@ -3,7 +3,7 @@
 /* GENERAL */
 #main-container {
   display: flex;
-  height: 100vh;
+  height: auto;
   font-family: 'Inter', sans-serif;
   background-color: #2e2b2c;
   color: #fff;
