--- a/app_admin/styles/screenDashboardOrdersAdmin.css
+++ b/app_admin/styles/screenDashboardOrdersAdmin.css
@@ -1,6 +1,6 @@
 #main-container {
   display: flex;
-  height: 100vh;
+  height: auto;
   font-family: 'Inter', sans-serif;
   background-color: #2e2b2c;
   color: white;
