--- a/app_user/styles/screenLandingPage.css
+++ b/app_user/styles/screenLandingPage.css
@@ -13,26 +13,36 @@
   justify-content: center;
   align-items: center;
   background-color: #000;
-  padding: 15px 0;
+  padding: 20px 0;
+  font-family: 'Inter', sans-serif;
   gap: 40px;
-  position: relative;
 }
 
-#landing-screen nav a {
+#landing-screen .nav-links {
+  display: flex;
+  gap: 40px;
+}
+
+#landing-screen .nav-links a {
   color: #fff;
   font-weight: bold;
   text-decoration: none;
   font-size: 0.85rem;
+  padding: 0 10px;
+  border-left: 1px solid white;
+}
+
+#landing-screen .nav-links a:first-child {
+  border-left: none;
 }
 
 #landing-screen nav img {
-  height: 40px;
-  margin: 0 30px;
+  height: 55px;
 }
 
 /* BANNER INICIAL */
 #landing-screen #bannerInitial {
-  background: url('/app_user/assets/banner.jpg') center/cover no-repeat;
+  background: url('/app_user/assets/banner-image.jpg') center/cover no-repeat;
   padding: 100px 20px 70px;
   text-align: center;
   color: #fff;
