--- a/app_user/styles/screenSignUpUser2.css
+++ b/app_user/styles/screenSignUpUser2.css
@@ -86,6 +86,7 @@
   display: flex;
   justify-content: center;
   margin-top: 30px;
+  gap: 40px;
 }
 
 #signup2-screen #next {
@@ -101,6 +102,23 @@
 }
 
 #signup2-screen #next:hover {
+  background-color: white;
+  color: black;
+}
+
+#signup2-screen #backBTN {
+  background: transparent;
+  color: white;
+  border: 2px solid white;
+  padding: 10px 32px;
+  font-weight: bold;
+  border-radius: 30px;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+#signup2-screen #backBTN:hover {
   background-color: white;
   color: black;
 }
